--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -41,6 +41,11 @@ jobs:
           echo "BASH_XTRACE_ENABLED=1" >> $GITHUB_ENV
           echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
 
+      - name: Install prerequisites (jq)
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y jq
+
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v4
         env:
@@ -54,10 +59,11 @@ jobs:
 
       - name: Configure JFrog URL
         run: |
-          jf c add --interactive=false --url "${{ vars.JFROG_URL }}" --access-token "${{ secrets.JFROG_ACCESS_TOKEN }}"
+          jf c add --interactive=false --url "${{ vars.JFROG_URL }}" --access-token "${{ secrets.JFROG_ADMIN_TOKEN }}"
 
       - name: Set variables and resolve application version
         run: |
+          set -euo pipefail
           SERVICE_NAME=$(echo ${{ github.event.repository.name }} | sed 's/bookverse-//')
           REGISTRY_URL=$(echo "${{ vars.JFROG_URL }}" | sed 's|https://||' | sed 's|http://||')
           TARGET=${{ inputs.target_stage }}
@@ -66,10 +72,29 @@ jobs:
           if [[ -n "${{ inputs.app_version }}" ]]; then
             APP_VERSION="${{ inputs.app_version }}"
           else
-            APP_VERSION=$(curl -s \
+            RESP_FILE=$(mktemp)
+            HTTP_STATUS=$(curl -sS -L -o "$RESP_FILE" -w "%{http_code}" \
               "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?limit=1&order_by=created&order_asc=false" \
-              -H "Authorization: Bearer ${{ secrets.JFROG_ACCESS_TOKEN }}" -H "Content-Type: application/json" | jq -r '.versions[0].version // empty')
+              -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
+              -H "X-JFrog-Project: ${{ vars.PROJECT_KEY }}" \
+              -H "Accept: application/json" || echo 000)
+            if [[ "$HTTP_STATUS" -ge 200 && "$HTTP_STATUS" -lt 300 ]]; then
+              APP_VERSION=$(jq -r '.versions[0].version // empty' "$RESP_FILE" 2>/dev/null || echo "")
+            else
+              echo "❌ Failed to fetch versions list for $APPLICATION_KEY (HTTP $HTTP_STATUS)" >&2
+              echo "URL: ${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?limit=1&order_by=created&order_asc=false" >&2
+              echo "Body:" >&2; cat "$RESP_FILE" || true
+              rm -f "$RESP_FILE"
+              exit 1
+            fi
+            rm -f "$RESP_FILE"
           fi
+
+          if [[ -z "${APP_VERSION:-}" || "$APP_VERSION" == "null" ]]; then
+            echo "❌ Could not determine AppTrust version for $APPLICATION_KEY. Provide 'app_version' input or ensure a version exists." >&2
+            exit 1
+          fi
+
           echo "SERVICE_NAME=$SERVICE_NAME" >> $GITHUB_ENV
           echo "REGISTRY_URL=$REGISTRY_URL" >> $GITHUB_ENV
           echo "APPLICATION_KEY=$APPLICATION_KEY" >> $GITHUB_ENV
@@ -83,7 +108,7 @@ jobs:
           if [[ -n "${HTTP_DEBUG_LEVEL:-}" ]]; then :; else export HTTP_DEBUG_LEVEL=basic; fi
           export JFROG_URL="${{ vars.JFROG_URL }}"
           export PROJECT_KEY="${{ vars.PROJECT_KEY }}"
-          export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"
+          export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"
           source .github/scripts/promote_lib.sh
           echo "📦 Application: $APPLICATION_KEY"
           echo "🏷️ Version: $APP_VERSION"
@@ -122,7 +147,7 @@ jobs:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
           set -euo pipefail
-          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"; source .github/scripts/promote_lib.sh
           fetch_summary
           if [[ -z "${CURRENT_STAGE:-}" || "$(display_stage_for "${CURRENT_STAGE}")" == "UNASSIGNED" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE}")"; fi
 
@@ -131,7 +156,7 @@ jobs:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
           set -euo pipefail
-          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"; source .github/scripts/promote_lib.sh
           fetch_summary
           if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "DEV" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
@@ -140,7 +165,7 @@ jobs:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
           set -euo pipefail
-          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"; source .github/scripts/promote_lib.sh
           fetch_summary
           if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "QA" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
@@ -149,7 +174,7 @@ jobs:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
           set -euo pipefail
-          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"; source .github/scripts/promote_lib.sh
           fetch_summary
           if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "STAGING" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
@@ -158,7 +183,7 @@ jobs:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
           set -euo pipefail
-          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ADMIN_TOKEN }}"; source .github/scripts/promote_lib.sh
           fetch_summary
           if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "STAGING" ]]; then ALLOW_RELEASE=true; advance_one_step; else echo "Skipping release: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
