fix(recommendations): update CI and rollback workflows
- Update CI workflow configurations
- Update rollback workflow settings
- Improve workflow consistency and error handling

--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -11,6 +11,9 @@ jobs:
   rollback:
     name: Rollback
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     env:
       JFROG_URL: ${{ vars.JFROG_URL }}
       JFROG_ADMIN_TOKEN: ${{ secrets.JFROG_ADMIN_TOKEN }}
