--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,12 @@ jobs:
           disable-auto-evidence-collection: false
           oidc-audience: ${{ vars.JFROG_URL }}
 
+      - name: "[Setup] Verify JFrog Authentication"
+        run: |
+          echo "🔐 Verifying JFrog CLI authentication and connectivity..."
+          jf rt ping
+          echo "✅ JFrog authentication successful"
+
       - name: "[Auth] Exchange OIDC and persist JF access token"
         env:
           JF_URL: ${{ vars.JFROG_URL }}
@@ -168,11 +174,41 @@ jobs:
           fi
           echo "APP_VERSION=$APP_VERSION" >> $GITHUB_ENV
           echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
-          
+
+          REPO_KEY="${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local"
+          VMAP_PATH="./config/version-map.yaml"
+          echo "🔎 Resolving next Image SemVer for docker:$REPO_KEY/$SERVICE_NAME (SemVer sort)"
+          IMG_RESP=$(curl -sS -L -X GET "${{ vars.JFROG_URL }}/api/docker/$REPO_KEY/$SERVICE_NAME/tags/list" \
+            -H "Authorization: Bearer $JF_ACCESS_TOKEN" \
+            -H "Accept: application/json" 2>/dev/null || echo '{"error":"curl_failed"}')
+          if ! echo "$IMG_RESP" | jq -e . >/dev/null 2>&1; then
+            IMG_LATEST=""
+          else
+            IMG_LATEST=$(echo "$IMG_RESP" | jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)')
+          fi
+          if [[ -n "${IMG_LATEST}" ]]; then
+            IFS='.' read -r I_MAJ I_MIN I_PAT <<<"${IMG_LATEST}"; I_PAT=$((I_PAT+1)); IMAGE_TAG="${I_MAJ}.${I_MIN}.${I_PAT}"
+          else
+            # Use seed version from local version map
+            IMG_SEED=$(awk -v app_key="$APPLICATION_KEY" '
+              BEGIN { found_app=0; in_packages=0; is_docker=0 }
+              /^  - key:/ { found_app = ($3 == app_key); in_packages=0; is_docker=0; next }
+              found_app && /^    packages:/ { in_packages=1; is_docker=0; next }
+              found_app && in_packages && /^      - type:[ \t]*docker/ { is_docker=1; next }
+              found_app && in_packages && is_docker && /^[[:space:]]+seed:[ \t]*/ {
+                sub(/^[ \t]+seed:[ \t]*/, "");
+                print; exit
+              }
+            ' "$VMAP_PATH" 2>/dev/null || echo "")
+            IMAGE_TAG="$IMG_SEED"
+            echo "✅ Using package seed version from version-map.yaml: $IMAGE_TAG"
+          fi
+
           REGISTRY_URL=${REGISTRY_URL:-${{ vars.DOCKER_REGISTRY }}}
-          IMAGE_TAG="$APP_VERSION"
-          IMAGE_NAME="$REGISTRY_URL/${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local/$SERVICE_NAME:$IMAGE_TAG"
+          REPO_KEY="${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local"
+          IMAGE_NAME="$REGISTRY_URL/$REPO_KEY/$SERVICE_NAME:$IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           echo "APPLICATION_KEY=$APPLICATION_KEY" >> $GITHUB_ENV
 
@@ -383,32 +419,49 @@ jobs:
 
       - name: "[Setup] Build variables (images/repos)"
         run: |
-          SERVICE_NAME=$(echo ${{ github.event.repository.name }} | sed 's/bookverse-//')
-          IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)
-          REGISTRY_URL="${{ vars.DOCKER_REGISTRY }}"
-          DOCKER_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-docker-nonprod-local"
-          API_PACKAGE_NAME="${SERVICE_NAME}"
+          set -euo pipefail
           WORKER_PACKAGE_NAME="${SERVICE_NAME}-worker"
-          # Compute next SemVer tags for API and Worker
-          JF_URL='${{ vars.JFROG_URL }}'
-          TOKEN='${{ secrets.JFROG_ADMIN_TOKEN }}'
-          list_next() { local name="$1"; local out; out="$(mktemp)"; local url="$JF_URL/artifactory/api/docker/$DOCKER_REPO/v2/$name/tags/list"; local code; code=$(curl -sS -L -o "$out" -w "%{http_code}" -H "Authorization: Bearer $TOKEN" "$url" || echo 000); if [[ "$code" -ge 200 && "$code" -lt 300 ]]; then jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)' "$out"; else echo ""; fi; rm -f "$out"; }
-          list_generic_latest() { local kind="$1"; local out; out="$(mktemp)"; local url="$JF_URL/artifactory/api/storage/$GENERIC_REPO/$SERVICE_NAME/$kind"; local code; code=$(curl -sS -L -o "$out" -w "%{http_code}" -H "Authorization: Bearer $TOKEN" -H "Accept: application/json" "$url" || echo 000); if [[ "$code" -ge 200 && "$code" -lt 300 ]]; then jq -r '[.children[]? | select(.folder==true) | .uri | ltrimstr("/") | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)' "$out"; else echo ""; fi; rm -f "$out"; }
-          last_api=$(list_next "$API_PACKAGE_NAME"); last_worker=$(list_next "$WORKER_PACKAGE_NAME")
-          if [[ -n "$last_api" ]]; then IFS='.' read -r ma mi pa <<<"$last_api"; pa=$((pa+1)); API_IMAGE_TAG="$ma.$mi.$pa"; else API_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
-          if [[ -n "$last_worker" ]]; then IFS='.' read -r ma mi pa <<<"$last_worker"; pa=$((pa+1)); WORKER_IMAGE_TAG="$ma.$mi.$pa"; else WORKER_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
+          GENERIC_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-generic-nonprod-local"
+          
+          # Calculate worker image version
+          echo "🔎 Resolving next Image SemVer for docker:$DOCKER_REPO/$WORKER_PACKAGE_NAME (SemVer sort)"
+          WORKER_RESP=$(curl -sS -L -X GET "${{ vars.JFROG_URL }}/api/docker/$DOCKER_REPO/v2/$WORKER_PACKAGE_NAME/tags/list" \
+            -H "Authorization: Bearer $JF_ACCESS_TOKEN" \
+            -H "Accept: application/json" 2>/dev/null || echo '{"error":"curl_failed"}')
+          if ! echo "$WORKER_RESP" | jq -e . >/dev/null 2>&1; then
+            WORKER_LATEST=""
+          else
+            WORKER_LATEST=$(echo "$WORKER_RESP" | jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)')
+          fi
+          if [[ -n "${WORKER_LATEST}" ]]; then
+            IFS='.' read -r W_MAJ W_MIN W_PAT <<<"${WORKER_LATEST}"; W_PAT=$((W_PAT+1)); WORKER_IMAGE_TAG="${W_MAJ}.${W_MIN}.${W_PAT}"
+          else
+            # Use seed version from local version map for worker
+            WORKER_SEED=$(awk -v app_key="$APPLICATION_KEY" '
+              BEGIN { found_app=0; in_packages=0; worker_found=0 }
+              /^  - key:/ { found_app = ($3 == app_key); in_packages=0; worker_found=0; next }
+              found_app && /^    packages:/ { in_packages=1; worker_found=0; next }
+              found_app && in_packages && /^      - type:[ \t]*docker/ { worker_found=1; next }
+              found_app && in_packages && worker_found && /^[[:space:]]+name:[ \t]*recommendations-worker/ { worker_found=2; next }
+              found_app && in_packages && worker_found == 2 && /^[[:space:]]+seed:[ \t]*/ {
+                sub(/^[ \t]+seed:[ \t]*/, "");
+                print; exit
+              }
+            ' "./config/version-map.yaml" 2>/dev/null || echo "")
+            WORKER_IMAGE_TAG="$WORKER_SEED"
+            echo "✅ Using worker seed version from version-map.yaml: $WORKER_IMAGE_TAG"
+          fi
+
+          # Set image names and tags
+          API_PACKAGE_NAME="${SERVICE_NAME}"
+          API_IMAGE_TAG="$IMAGE_TAG"  # Use the main API image tag calculated in semver step
           API_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$API_PACKAGE_NAME:$API_IMAGE_TAG"
           WORKER_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$WORKER_PACKAGE_NAME:$WORKER_IMAGE_TAG"
-          GENERIC_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-generic-nonprod-local"
-          # Compute per-bundle SemVer: bump if exists, else random (major 1-5, minor 1-50, patch 1-50)
-          last_config=$(list_generic_latest "config")
-          if [[ -n "$last_config" ]]; then IFS='.' read -r ma mi pa <<<"$last_config"; pa=$((pa+1)); CONFIG_VERSION_TAG="$ma.$mi.$pa"; else CONFIG_VERSION_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
-          last_resources=$(list_generic_latest "resources")
-          if [[ -n "$last_resources" ]]; then IFS='.' read -r ma mi pa <<<"$last_resources"; pa=$((pa+1)); RESOURCES_VERSION_TAG="$ma.$mi.$pa"; else RESOURCES_VERSION_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
-          echo "SERVICE_NAME=$SERVICE_NAME" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$API_IMAGE_TAG" >> $GITHUB_ENV
-          echo "REGISTRY_URL=$REGISTRY_URL" >> $GITHUB_ENV
-          echo "DOCKER_REPO=$DOCKER_REPO" >> $GITHUB_ENV
+          
+          # Set generic artifact versions to match the main API image version
+          CONFIG_VERSION_TAG="$IMAGE_TAG"
+          RESOURCES_VERSION_TAG="$IMAGE_TAG"
+          
           echo "API_PACKAGE_NAME=$API_PACKAGE_NAME" >> $GITHUB_ENV
           echo "WORKER_PACKAGE_NAME=$WORKER_PACKAGE_NAME" >> $GITHUB_ENV
           echo "API_IMAGE_NAME=$API_IMAGE_NAME" >> $GITHUB_ENV
@@ -813,6 +866,9 @@ jobs:
   create-application-version:
     needs: build-test-publish
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     permissions:
       contents: read
       id-token: write
@@ -837,6 +893,12 @@ jobs:
           disable-auto-build-publish: true
           disable-auto-evidence-collection: false
           oidc-audience: ${{ vars.JFROG_URL }}
+
+      - name: "[Setup] Verify JFrog Authentication"
+        run: |
+          echo "🔐 Verifying JFrog CLI authentication and connectivity..."
+          jf rt ping
+          echo "✅ JFrog authentication successful"
 
       - name: "[Setup] JFrog config"
         run: |
